# Personal-Game-Engine

./: .gitignore  CMakeLists.txt  README.md
Engine/Code/Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/Code/Engine/Assets/: Asset.cpp  Asset.h  AssetID.cpp  AssetID.h  AssetKey.cpp  AssetKey.h  AssetLoaderFunction.h  AssetLoaders.cpp  AssetLoaders.h  AssetManager.cpp  AssetManager.h  AsyncLoadAssetJob.cpp  AsyncLoadAssetJob.h  Font.cpp  Font.h  GridSpriteSheet.cpp  GridSpriteSheet.h  Image.cpp  Image.h  ShaderAsset.cpp  ShaderAsset.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteAnimationGroup.cpp  SpriteAnimationGroup.h  TextureAsset.cpp  TextureAsset.h
Engine/Code/Engine/Audio/: AudioSystem.cpp  AudioSystem.h  AudioUtils.cpp  AudioUtils.h  MiniAudioSound.cpp  MiniAudioSound.h  MiniAudioSystem.cpp  MiniAudioSystem.h  Sound.cpp  Sound.h
Engine/Code/Engine/Core/: BinaryUtils.cpp  BinaryUtils.h  Clock.cpp  Clock.h  Engine.cpp  Engine.h  EngineCommon.h  EngineSubsystem.cpp  EngineSubsystem.h  ErrorUtils.cpp  ErrorUtils.h  FileUtils.cpp  FileUtils.h  Image.cpp  Image.h  Name.cpp  Name.h  NameTable.cpp  NameTable.h  NamedProperties.cpp  NamedProperties.h  StringUtils.cpp  StringUtils.h  TagQuery.cpp  TagQuery.h  Time.cpp  Time.h  XmlUtils.cpp  XmlUtils.h
Engine/Code/Engine/DataStructures/: BitArray.cpp  BitArray.h  NamedProperties.cpp  NamedProperties.h  Singleton.cpp  Singleton.h  ThreadSafePrioQueue.cpp  ThreadSafePrioQueue.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h
Engine/Code/Engine/Debug/: DebugDrawUtils.cpp  DebugDrawUtils.h  DevConsole.cpp  DevConsole.h  DevConsoleArg.h  DevConsoleCommandHistory.cpp  DevConsoleCommandHistory.h  DevConsoleCommandInfo.cpp  DevConsoleCommandInfo.h  DevConsoleInput.cpp  DevConsoleInput.h  DevConsoleLine.cpp  DevConsoleLine.h  DevConsoleLog.cpp  DevConsoleLog.h  DevConsoleUtils.cpp  DevConsoleUtils.h  SSystemDebug.cpp  SSystemDebug.h
Engine/Code/Engine/ECS/: AdminSystem.cpp  AdminSystem.h  Component.cpp  Component.h  ComponentStorage.cpp  ComponentStorage.h  Config.cpp  Config.h  EntityDefinition.cpp  EntityDefinition.h  EntityID.cpp  EntityID.h  GroupIter.cpp  GroupIter.h  System.cpp  System.h  SystemContext.cpp  SystemContext.h  SystemScheduler.cpp  SystemScheduler.h  SystemSubgraph.cpp  SystemSubgraph.h
Engine/Code/Engine/Events/: EventCallbackFunction.h  EventDelegate.cpp  EventDelegate.h  EventSubscriber.cpp  EventSubscriber.h  EventSystem.cpp  EventSystem.h  EventUtils.cpp  EventUtils.h
Louganis/Code/Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  TileDefinition.cpp  TileDefinition.h
(+822 files in other folders)
